--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  margin-bottom: 50px;
+}
+
+form {
+  max-width: 400px;
+  text-align: left;
+  margin: 0 auto;
+  border: 1px solid gray;
+  padding: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 20px;
+  line-height: 34px;
+  display: block;
+}
+
+input {
+  float: right;
+  line-height: 34px;
+  width: 360px;
+  display: block;
+}
+
+input[type="checkbox"] {
+  width: 20px;
+  float: left;
+  line-height: 34px;
+  margin-top: 12px;
+}
+
+button {
+  width: 100%;
+  line-height: 34px;
+}
